--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(genusForm) }}
+
+    {{ form_errors(genusForm) }}
+
     {{ form_row(genusForm.name) }}
     {{ form_row(genusForm.subFamily) }}
     {{ form_row(genusForm.speciesCount, {
