--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -3,7 +3,14 @@
     {{ form_errors(genusForm) }}
 
     {{ form_row(genusForm.name) }}
-    {{ form_row(genusForm.subFamily) }}
+    {{ dump(genusForm.subFamily.vars) }}
+    {{ form_row(genusForm.subFamily, {
+        'label' : 'Taxonomic subFamily',
+        attr: {
+            class: 'foo',
+        },
+        placeholder: 'Select a SubFamily'
+    }) }}
     {{ form_row(genusForm.speciesCount, {
         'label': 'Number of Species'
     }) }}
