--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -14,7 +14,9 @@
         'label': 'Number of Species'
     }) }}
     {{ form_row(genusForm.funFact) }}
-    {{ form_row(genusForm.isPublished) }}
+    {{ form_row(genusForm.isPublished, {
+        help: "Test"
+    }) }}
     {{ form_row(genusForm.firstDiscoveredAt) }}
 <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
 {{ form_end(genusForm) }}
