form options and variables

--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -15,7 +15,7 @@
     }) }}
     {{ form_row(genusForm.funFact) }}
     {{ form_row(genusForm.isPublished, {
-        help: "Test"
+        help: "Sould this genus be shown on the site ?"
     }) }}
     {{ form_row(genusForm.firstDiscoveredAt) }}
 <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
