--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -17,6 +17,10 @@
     {{ form_row(genusForm.isPublished, {
         help: "Sould this genus be shown on the site ?"
     }) }}
-    {{ form_row(genusForm.firstDiscoveredAt) }}
+    {{ form_label(genusForm.firstDiscoveredAt) }}
+    {{ form_errors(genusForm.firstDiscoveredAt) }}
+    {{ form_row(genusForm.firstDiscoveredAt.year) }}
+    {{ form_row(genusForm.firstDiscoveredAt.month) }}
+    {{ form_row(genusForm.firstDiscoveredAt.day) }}
 <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
 {{ form_end(genusForm) }}
