--- a/app/Resources/views/admin/genus/_form.html.twig
+++ b/app/Resources/views/admin/genus/_form.html.twig
@@ -17,9 +17,18 @@
     {{ form_row(genusForm.isPublished, {
         help: "Sould this genus be shown on the site ?"
     }) }}
-    {{ form_label(genusForm.firstDiscoveredAt) }}
-    {{ form_errors(genusForm.firstDiscoveredAt) }}
-    {{ form_row(genusForm.firstDiscoveredAt.year) }}
+
+    {{ form_label(genusForm.firstDiscoveredAt.year) }}
+    {% do genusForm.firstDiscoveredAt.year.setRendered() %}
+    <select id="{{ genusForm.firstDiscoveredAt.year.vars.id }}" name="{{ genusForm.firstDiscoveredAt.year.vars.full_name }}">
+        {% for choice in genusForm.firstDiscoveredAt.year.vars.choices %}
+            <option value="{{ choice.value }}" {{ choice.value == genusForm.firstDiscoveredAt.year.vars.data ? ' selected' : '' }}>
+                {{ choice.label }}
+            </option>
+        {% endfor %}
+    </select>
+    {{ form_errors(genusForm.firstDiscoveredAt.year) }}
+
     {{ form_row(genusForm.firstDiscoveredAt.month) }}
     {{ form_row(genusForm.firstDiscoveredAt.day) }}
 <button type="submit" class="btn btn-primary" formnovalidate>Save</button>
